[gd_scene load_steps=9 format=2]

[ext_resource path="res://MiscRelated/CutsceneRelated/GUI_Cutscene.gd" type="Script" id=1]
[ext_resource path="res://MiscRelated/GUIControlsRelated/PlayerGUI_ButtonStandard/PlayerGUI_ButtonStandard.tscn" type="PackedScene" id=2]
[ext_resource path="res://MiscRelated/FontRelated/Fonts/LcdSolid/LcdSolid-VPzB.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://MiscRelated/CutsceneRelated/Assets/GUI_Cutscene_NextButton_Highlighted.png" type="Texture" id=4]
[ext_resource path="res://MiscRelated/CutsceneRelated/Assets/GUI_Cutscene_NextButton_Normal.png" type="Texture" id=5]
[ext_resource path="res://_NonMainGameRelateds/_PreGameHUDRelated/FirstTimeQuestionWSPanel/Subs/FTQ_CustomLabel/FTQ_CustomLabel.tscn" type="PackedScene" id=6]
[ext_resource path="res://MiscRelated/CutsceneRelated/Assets/GUI_Cutscene_Background_1x1.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
size = 18
outline_size = 2
outline_color = Color( 0.133333, 0.133333, 0.133333, 1 )
font_data = ExtResource( 3 )

[node name="GUI_Cutscene" type="Control"]
margin_right = 960.0
margin_bottom = 540.0
script = ExtResource( 1 )

[node name="Background" type="TextureRect" parent="."]
margin_right = 960.0
margin_bottom = 540.0
mouse_filter = 2
texture = ExtResource( 7 )
stretch_mode = 2

[node name="Button" type="TextureButton" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="CutsceneChangerButtonPanel" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -480.0
margin_top = -70.0
margin_right = 480.0
mouse_filter = 2
size_flags_horizontal = 3
custom_constants/margin_right = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="LeftButton" parent="CutsceneChangerButtonPanel" instance=ExtResource( 2 )]
margin_left = 20.0
margin_right = 120.0
margin_bottom = 50.0
size_flags_horizontal = 2

[node name="TextureButton" parent="CutsceneChangerButtonPanel/LeftButton" index="0"]
margin_right = 100.0
margin_bottom = 50.0
texture_normal = ExtResource( 5 )
texture_hover = ExtResource( 4 )
flip_h = true

[node name="LabelContainer" parent="CutsceneChangerButtonPanel/LeftButton" index="1"]
margin_right = 100.0
margin_bottom = 50.0
custom_constants/margin_left = 26

[node name="Label" parent="CutsceneChangerButtonPanel/LeftButton/LabelContainer" index="0"]
margin_left = 26.0
margin_right = 100.0
margin_bottom = 50.0
custom_fonts/font = SubResource( 1 )
text = "Prev"

[node name="RightButton" parent="CutsceneChangerButtonPanel" instance=ExtResource( 2 )]
margin_left = 840.0
margin_right = 940.0
margin_bottom = 50.0
size_flags_horizontal = 8

[node name="TextureButton" parent="CutsceneChangerButtonPanel/RightButton" index="0"]
margin_right = 100.0
margin_bottom = 50.0
texture_normal = ExtResource( 5 )
texture_hover = ExtResource( 4 )

[node name="LabelContainer" parent="CutsceneChangerButtonPanel/RightButton" index="1"]
margin_right = 100.0
margin_bottom = 50.0
custom_constants/margin_right = 26

[node name="Label" parent="CutsceneChangerButtonPanel/RightButton/LabelContainer" index="0"]
margin_right = 74.0
margin_bottom = 50.0
custom_fonts/font = SubResource( 1 )
text = "Next"

[node name="FTQLabel_PageDisplayer" parent="CutsceneChangerButtonPanel" instance=ExtResource( 6 )]
margin_left = 20.0
margin_right = 940.0
margin_bottom = 50.0
default_font_size = 25

[node name="CutsceneContainer" type="Control" parent="."]
margin_right = 960.0
margin_bottom = 540.0
mouse_filter = 2

[node name="CutsceneLoadingContainer" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="button_pressed" from="CutsceneChangerButtonPanel/LeftButton" to="." method="_on_LeftButton_button_pressed"]
[connection signal="button_pressed" from="CutsceneChangerButtonPanel/RightButton" to="." method="_on_RightButton_button_pressed"]

[editable path="CutsceneChangerButtonPanel/LeftButton"]
[editable path="CutsceneChangerButtonPanel/RightButton"]
